in progress: process implementation

--- a/01-camunda-spring-boot-infrastructure/pom.xml
+++ b/01-camunda-spring-boot-infrastructure/pom.xml
@@ -22,7 +22,7 @@
 
 	<dependencyManagement>
 		<dependencies>
-			
+
 			<dependency>
 				<!-- Import dependency management from camunda -->
 				<groupId>org.camunda.bpm</groupId>
@@ -31,10 +31,16 @@
 				<scope>import</scope>
 				<type>pom</type>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>org.camunda.bpm.springboot</groupId>
 				<artifactId>camunda-bpm-spring-boot-starter</artifactId>
+				<version>3.2.1</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.camunda.bpm.springboot</groupId>
+				<artifactId>camunda-bpm-spring-boot-starter-webapp</artifactId>
 				<version>3.2.1</version>
 			</dependency>
 
@@ -50,6 +56,17 @@
 		<dependency>
 			<groupId>org.camunda.bpm.springboot</groupId>
 			<artifactId>camunda-bpm-spring-boot-starter</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.camunda.bpm.springboot</groupId>
+			<artifactId>camunda-bpm-spring-boot-starter-webapp</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.4.199</version>
 		</dependency>
 
 		<dependency>
